<resources>
    <string name="app_name">Facebook Client</string>
    <string name="facebook_app_id">367325453100475</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">3f124e2a435f338026010f7d33b71bbf</string>
    <string name="homepage">homepage</string>
    <string name="friend_list">friend_list</string>
    <string name="video">video</string>
    <string name="notification">notification</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="messenger">Messenger</string>
    <string name="profile_image">Profile Image</string>
    <string name="user_name">ICT GUY</string>
    <string name="add_to_story">+ Add to story</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="details">Details</string>
    <string name="others">…</string>
    <string name="details_study">Study at USTH</string>
    <string name="details_from">From Hanoi</string>
    <string name="details_live">Lives in Hanoi</string>
    <string name="details_relationship">Single</string>
    <string name="edit_public_details">Edit public details</string>
    <string name="Icon1">Icon</string>
    <string name="like_button_text">like</string>
    <string name="comment_button_text">comment</string>
    <string name="Emily"><b>Emily</b> updated her cover photo </string>
    <string name="time_counter_text">3 mins ago</string>
    <string name="like_number">1B</string>
    <string name="comment_number">3.6B Comments</string>
    <string name="Ronaldo"><b>SIUUU Ronaldo</b> had a Photoshot session at <b>AL Nassr</b></string>
    <string name="Notifications"><b>Notifications</b></string>
    <string name="New"><b>New</b></string>
    <string name="See_all">See all</string>
    <string name="Emily_send_friend_request"><b>Emily </b>sent you a friend request.</string>
    <string name="three_days_ago">3 days ago</string>
    <string name="fifteen_mutual_friends">15 mutual friends</string>
    <string name="Confirm">Confirm</string>
    <string name="Delete">Delete</string>
    <string name="Earlier"><b>Earlier</b></string>
    <string name="ronaldo_bday">Its <b>Cristiano Ronaldo</b> birthday today. Help him celebrate!</string>
    <string name="Anthony"><b>Anthony dos Santos</b> and 2 other friends had birthdays yesterday.</string>
    <string name="Birthdays"><b>K.Mbappe</b> and <b>URgoat.cr7</b> had birthdays on November 24.</string>
    <string name="URgoat.cr7"><b>URgoat.cr7</b> posted in <b>AL Nassr, Saudi Arabia</b> on Tuesday: "Cristiano Ronaldo…</string>
    <string name="CR7">A Page you like,\n<b>Scoring900goals.com</b>, changed its name to <b>GoCristiano</b></string>
    <string name="Ballon_dor"><b>Ballon Dor</b> sent you a friend request.</string>
    <string name="Anthony_100M"><b>Anthony 100M</b> sent you a friend request</string>
    <string name="Ten_Hag"><b>Erik Ten Hag</b> sent you a friend request</string>
    <string name="four_hours_ago">4 hours ago</string>
    <string name="A_day_ago">a day ago</string>
    <string name="two_days_ago">2 days ago</string>
    <string name="four_days_ago">4 days ago</string>
    <string name="two_weeks_ago">2 weeks ago</string>
    <string name="cancel_button">cancel button</string>
    <string name="create_post"><b>Create post</b></string>
    <string name="post">post</string>
    <string name="enter_text">Enter text</string>
    <string name="add_image">Add image</string>
    <string name="tag_people">Tag people</string>
    <string name="TAB">A Tab Layout</string>
    <string name="saved">Saved</string>
    <string name="most_recent">Most recent</string>
    <string name="collections">Collections</string>
    <string name="see_all">See all</string>
    <string name="create">Create</string>
    <string name="football">Football</string>
    <string name="watch_later">Watch Later</string>
    <string name="public_">Public</string>
    <string name="only_me">Only me</string>
    <string name="son_tung_mtp_cap">I think of you so much that my hair is messy 🙄</string>
    <string name="ronaldo_900_cap">Until the last moment. Keep believing!</string>
    <string name="usth_welcome_gen15_cap">Welcome Gen 15!!!</string>
    <string name="messi_is_back">Messi is back</string>
    <string name="porsche">Porsche</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="return_button">return_button</string>
    <string name="search_group">search group</string>
    <string name="groups_you_ve_joined">Groups you\'ve joined</string>
    <string name="placeholder_image">Placeholder Image</string>
    <string name="anthony_dos_santos">Anthony dos Santos</string>
    <string name="story_photo">Story Photo</string>
    <string name="cristiano_ballor_d_or">Cristiano Ballor D\'or</string>
    <string name="manchester_united">Manchester United</string>
    <string name="add_your_story">Add Your Story</string>
    <string name="kylian_mbappe">Kylian Mbappe Real Madrid</string>
    <string name="stories">Stories</string>
    <string name="see_archive"><![CDATA[See Archive >]]></string>
    <string name="_3b">3B</string>
    <string name="mbappe_updated_his_cover_photo"><b>Mbappe</b> updated his cover photo</string>
    <string name="ninja_turtle_mbappe">Ninja Turtle Mbappe</string>
    <string name="anthony_100m_scores">Anthony 100M scores</string>
    <string name="post_photo">Post Photo</string>
    <string name="kylian_photo_and_name">Kylian photo and name</string>
    <string name="Memories">Memories</string>
    <string name="clock">clock</string>
    <string name="setting">"setting "</string>
    <string name="arrow">arrow\n</string>
    <string name="headpicture">picture of memory</string>
    <string name="note">From the most recent memories to those long ago, we hope you enjoy looking back at your memories on Facebook</string>
    <string name="ICT_guy">ICT guy has updated his avatar</string>
    <string name="year_time">2 years ago</string>
    <string name="like_score">2B</string>
    <string name="comment_score">5B Comments</string>
    <string name="Icon2">Angry icon \n</string>
    <string name="menu"><b>Menu</b></string>
    <string name="group">Group</string>
    <string name="settings">Settings</string>
    <string name="group_button">Group button</string>
    <string name="settings_button">Settings button</string>
    <string name="memory_button">Memory button</string>
    <string name="saved_button">Saved button</string>

    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>

    <string name="reaction_count">100k</string>
    <string name="cmt_count">12k</string>
    <string name="my_friends">My Friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="share_link">Share link</string>
    <string name="share_photo">Share photo</string>
    <string name="Video">Video</string>
    <string name="video_title">Video Title</string>
    <string name="textview">TextView</string>
    <string name="video_image">Video_image</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="comments">Comments:</string>

</resources>