<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/app_bar_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile"
            android:visible="false" />
        <item
            android:id="@+id/app_bar_refresh"
            android:icon="@android:drawable/stat_notify_sync"
            android:title="@string/refresh"
            app:showAsAction="always" />
        <item
            android:id="@+id/app_bar_settings"
            android:icon="@drawable/setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/app_bar_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            app:actionViewClass="android.widget.SearchView"
            app:showAsAction="always" />
        <item
            android:id="@+id/app_bar_logout"
            android:title="@string/logout" />
    </group>
</menu>