<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/most_recent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ronaldo_900"
                android:scaleType="centerCrop"
                android:contentDescription="@string/ronaldo_900_cap"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ronaldo_900_cap" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/son_tung_mtp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/son_tung_mtp_cap"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/son_tung_mtp_cap" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/usth_welcome_gen15"
                android:scaleType="centerCrop"
                android:contentDescription="@string/usth_welcome_gen15_cap"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usth_welcome_gen15_cap" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:backgroundTint="@color/com_facebook_blue"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/collections"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create"
                android:textColor="@color/com_facebook_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_marginEnd="12dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="100"
                    android:contentDescription="@string/messi_is_back"
                    android:src="@drawable/messi_is_back"
                    android:scaleType="centerCrop"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/football"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/public_"
                    android:textSize="12sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="100"
                    android:src="@drawable/porsche"
                    android:contentDescription="@string/porsche"
                    android:scaleType="centerCrop"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/watch_later"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/only_me"
                    android:textSize="12sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>