<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Post_list">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/homepage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/homepage"
                android:src="@drawable/trang_chu" />

            <ImageButton
                android:id="@+id/friend_list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/friend_list"
                android:src="@drawable/ket_ban" />

            <ImageButton
                android:id="@+id/video"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/video"
                android:src="@drawable/video" />

            <ImageButton
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/notification"
                android:src="@drawable/notification" />

            <ImageButton
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/profile"
                android:src="@drawable/trang_ca_nhan" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>