<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakePostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cancel_button"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/create_post"
                android:textAlignment="center" />

            <Button
                android:id="@+id/postButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/post" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addPostContentInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/enter_text"
                android:textAlignment="textStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/additionalFunctions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addImageButton"
                style="@style/com_facebook_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@android:drawable/ic_menu_gallery"
                android:text="@string/add_image"
                android:textSize="16sp" />

            <Button
                android:id="@+id/useCameraButton"
                style="@style/com_facebook_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@android:drawable/ic_menu_camera"
                android:text="@string/camera"
                android:textSize="16sp" />

            <Button
                android:id="@+id/tagPeopleButton"
                style="@style/com_facebook_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@android:drawable/ic_menu_myplaces"
                android:text="@string/tag_people"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>