<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    tools:context=".MemoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/arrow"
                android:padding="4dp"
                android:src="@drawable/arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="50dp"
                android:text="@string/Memories"
                android:textSize="32sp" />

            <ImageView
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/clock"
                android:padding="4dp"
                android:src="@drawable/clock" />

            <ImageView
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/setting"
                android:padding="4dp"
                android:src="@drawable/setting" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/headpicture"
                android:src="@drawable/headpicture" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="14dp"
                android:gravity="center"
                android:text="@string/note"
                android:textSize="19sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/Icon1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_avatar" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="80dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ICT_guy"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year_time" />
            </LinearLayout>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/Icon1"
                android:src="@drawable/_380510_200"
                app:tint="#666666" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="400dp"
                android:layout_height="269dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/headpicture"
                android:src="@drawable/profile_avatar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/Icon2"
                android:src="@drawable/angry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="232dp"
                android:text="@string/like_score" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_score" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/Icon1"
                    android:src="@drawable/like" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like_button_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/Icon1"
                    android:src="@drawable/chat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_button_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>