<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Menu">

    <!-- Notification header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/menu"
            android:textSize="32sp"
            android:layout_marginEnd="96dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/Icon1"
            android:maxWidth="24dp"
            android:scaleType="fitEnd"
            android:src="@drawable/_380510_200"
            app:tint="@color/grey" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:text="@string/group"
            android:textSize="32sp"
            android:drawableLeft="@android:drawable/ic_dialog_map"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:contentDescription="@string/Icon1"/>

        <Button
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:text="@string/settings"
            android:textSize="32sp"
            android:drawableLeft="@android:drawable/ic_menu_compass"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:contentDescription="@string/Icon1"/>
        <Button
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:text="@string/Memory"
            android:textSize="32sp"
            android:drawableLeft="@android:drawable/ic_menu_compass"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:contentDescription="@string/Icon1"/>
        <Button
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:text="@string/saved"
            android:textSize="32sp"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:contentDescription="@string/Icon1"/>
    </LinearLayout>



</LinearLayout>